@@ -31,6 +31,11 @@ Lua
 
 * Access to the HTTP headers in the "IncomingHttpRequestFilter()" callback
 
+REST API
+--------
+
+* "MoveOriginatorID" can be specified for /modalities/.../store
+
 Maintenance
 -----------
 
